--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -109,8 +109,10 @@
     <nav class="navbar">
         <a href="{% url 'start_ocr_page' %}" class="logo">My OCR App</a>
         <ul class="nav-links">
+            <li><a href="{% url 'chatBot_page' %}">ChatBot</a></li>
             <li><a href="{% url 'start_ocr_page' %}">Start OCR</a></li>
             <li><a href="{% url 'folder_list' %}">Explorer</a></li>
+            <li><a href="{% url 'analyze_page' %}">Visualizer</a></li>
         </ul>
     </nav>
 
