--- a/django-app/analyzer/templates/start_ocr.html
+++ b/django-app/analyzer/templates/start_ocr.html
@@ -93,6 +93,19 @@
     </style>
     <div class="container animate-in">
         <h1 class="">Processing Images</h1>
+
+        <!-- Checkboxes for Selecting Analysis Steps -->
+        <div class="form-group">
+            <label style="display: none;"><input type="checkbox" id="ocr" checked> Texterkennung und Boxen</label><br>
+            <label><input type="checkbox" id="color_analysis" checked> Analyze Colors</label><br>
+            <label><input type="checkbox" id="sentiment_analysis" checked> Sentiment Analysis</label><br>
+            <label><input type="checkbox" id="font_size" checked> Detect Font Sizes</label><br>
+        </div>
+
+        <label>
+            <input type="checkbox" id="llm-sentiment-checkbox"> Use LLM for Sentiment Analysis
+        </label>
+
         <button onclick="startOcrProcess()" class="">Start EasyOCR zur Texterkennung aller Bilder</button>
         
         <!-- <div class="mt-4">
@@ -119,6 +132,11 @@
                 },
                 body: JSON.stringify({
                     //save_annotated_images: saveAnnotatedImages 
+                    ocr: document.getElementById('ocr').checked,
+                    color_analysis: document.getElementById('color_analysis').checked,
+                    sentiment_analysis: document.getElementById('sentiment_analysis').checked,
+                    font_size: document.getElementById('font_size').checked,
+                    llm_sentiment: document.getElementById('llm-sentiment-checkbox').checked
                 })
             })
             .then(response => response.json())
