--- a/django-app/visualizer/templates/visualizer/chart_page.html
+++ b/django-app/visualizer/templates/visualizer/chart_page.html
@@ -143,7 +143,7 @@
         
     </p>
 
-    <div id="plotly-chart" style="height: 100%;">
+    <div id="plotly-chart" style="height: 45vh;">
         <!-- Plotly chart will be rendered here -->
     </div>
 
